# phd-thesis

./: .gitignore  Makefile  _cli.md  _cli.qmd  _kimmdy_plots.html  _kimmdy_plots.qmd  _plots.qmd  _template.tex  index.html  index.qmd  presentation.html  presentation.qmd  pyproject.toml  readme.md  references.bib  setup.sh  style.css
_kimmdy_plots_files/libs/bootstrap/: bootstrap-6e84383a983d49116d99796924f18a8f.min.css
assets/: biophysical-journal.csl  dcfh2.ket  dopa.ket  gly-hoh-all.dot  gly-hoh-attack.dot  gly-hoh-final.dot  gly-hoh.dot  gly-hoh.top  gly-pro.ket  gly.gro  gly.top  glycine.ket  hyd-vs-hom-reaction.ket  hydrolysis-reaction.ket  hydroxylysine.ket  hydroxyproline.ket  ketcher-settings  kimmdy.yml  lysine.ket  macros.vim  nature-mod.csl  phenylalanine.ket  propionaldeyde.ket  pyridinoline-center.ket  top-after.dot  top-before.dot  top-bond-forces-pro.dot  top-bond-forces.dot  vis-gly-mm.vmd
figures/hyd/: reaction.ket
index_files/libs/bootstrap/: bootstrap-347c7beb9f3f6df44ff8f742ab6b71c1.min.css  bootstrap-73bc89410ad003d179684269a6d29684.min.css  bootstrap-dark-20ed696296808962a5379685346e19c9.min.css  bootstrap-dark-ac773e4cb3c72cc83dc4c11a6c85c077.min.css
scripts/: sync-plots.sh
src/: style.py
www/: presentation.css  presentation.scss  theme.scss  theme_dark.scss
